add new api endpoint for node pool add, delete, scale (#146)
